; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cconfig.c_compareSize.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cconfig.c_compareSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @compareSize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @compareSize(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %16

7:                                                ; preds = %2
  %8 = load i32*, i32** %4, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %16

10:                                               ; preds = %7
  %11 = load i32*, i32** %3, align 8
  %12 = call i64 @r_anal_fcn_realsize(i32* %11)
  %13 = load i32*, i32** %4, align 8
  %14 = call i64 @r_anal_fcn_realsize(i32* %13)
  %15 = icmp sgt i64 %12, %14
  br label %16

16:                                               ; preds = %10, %7, %2
  %17 = phi i1 [ false, %7 ], [ false, %2 ], [ %15, %10 ]
  %18 = zext i1 %17 to i32
  ret i32 %18
}

declare dso_local i64 @r_anal_fcn_realsize(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
